ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <ingress_name>
  namespace: <namespace>
  annotations: #annotations 옵션으로 alb에 세밀한 설정이 가능하다. 이건 예시고 더 많이 있다
    alb.ingress.kubernetes.io/scheme: <alb_internet> #internet-facing or internal
    alb.ingress.kubernetes.io/target-type: <target_group_type>
    alb.ingress.kubernetes.io/load-balancer-name: <alb_name>
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: <service_name>
              port:
                number: 80
